[gd_scene load_steps=2 format=3 uid="uid://cgchxlrwd55ih"]

[ext_resource type="Script" path="res://Scripts/debug_menu.gd" id="1_uqd87"]

[node name="Debug_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqd87")

[node name="ShowButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -17.0
offset_right = 92.0
offset_bottom = 14.0
grow_vertical = 2
rotation = 1.5708
text = "SHOW"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 271.0
offset_bottom = 650.0

[node name="HideButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 29.0
offset_top = -15.5
offset_right = 75.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
rotation = 1.5708
text = "HIDE"

[node name="World_Debug" type="Control" parent="Panel"]
anchors_preset = 0
offset_top = 44.0
offset_right = 270.0
offset_bottom = 648.0

[node name="option" type="VBoxContainer" parent="Panel/World_Debug"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="world" type="VBoxContainer" parent="Panel/World_Debug/option"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/world"]
layout_mode = 2
text = "WORLD SETTINGS"

[node name="world_speed" type="HBoxContainer" parent="Panel/World_Debug/option/world"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/world/world_speed"]
layout_mode = 2
text = "world_speed
"

[node name="LineEdit_wspeed" type="LineEdit" parent="Panel/World_Debug/option/world/world_speed"]
layout_mode = 2

[node name="energy_diffusion" type="VBoxContainer" parent="Panel/World_Debug/option"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/energy_diffusion"]
layout_mode = 2
text = "ENERGY SETTINGS"

[node name="speed" type="HBoxContainer" parent="Panel/World_Debug/option/energy_diffusion"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/energy_diffusion/speed"]
layout_mode = 2
text = "diffusion speed [s]"

[node name="LineEdit_speed" type="LineEdit" parent="Panel/World_Debug/option/energy_diffusion/speed"]
layout_mode = 2

[node name="factor" type="HBoxContainer" parent="Panel/World_Debug/option/energy_diffusion"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/energy_diffusion/factor"]
layout_mode = 2
text = "diffusion factor"

[node name="LineEdit_factor" type="LineEdit" parent="Panel/World_Debug/option/energy_diffusion/factor"]
layout_mode = 2

[node name="minvalue" type="HBoxContainer" parent="Panel/World_Debug/option/energy_diffusion"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/energy_diffusion/minvalue"]
layout_mode = 2
text = "min value"

[node name="LineEdit_min" type="LineEdit" parent="Panel/World_Debug/option/energy_diffusion/minvalue"]
layout_mode = 2

[node name="spawn_energy" type="VBoxContainer" parent="Panel/World_Debug/option"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/spawn_energy"]
layout_mode = 2
text = "SPAWN/REMOVE/EDIT BLOCKS"

[node name="edit_energy" type="HBoxContainer" parent="Panel/World_Debug/option/spawn_energy"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/spawn_energy/edit_energy"]
layout_mode = 2
text = "new value"

[node name="LineEdit_spawnenergy" type="LineEdit" parent="Panel/World_Debug/option/spawn_energy/edit_energy"]
layout_mode = 2

[node name="radius" type="HBoxContainer" parent="Panel/World_Debug/option/spawn_energy"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/spawn_energy/radius"]
layout_mode = 2
text = "radius"

[node name="LineEdit_radius" type="LineEdit" parent="Panel/World_Debug/option/spawn_energy/radius"]
layout_mode = 2

[node name="mouse" type="HBoxContainer" parent="Panel/World_Debug/option/spawn_energy"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/World_Debug/option/spawn_energy/mouse"]
layout_mode = 2
text = "on mouse right click"

[node name="CheckBox" type="CheckBox" parent="Panel/World_Debug/option/spawn_energy/mouse"]
layout_mode = 2

[node name="Alife_Debug" type="Control" parent="Panel"]
visible = false
anchors_preset = 0
offset_top = 44.0
offset_right = 270.0
offset_bottom = 648.0

[node name="Spawn_Button" type="Button" parent="Panel/Alife_Debug"]
layout_mode = 0
offset_left = 96.0
offset_top = 160.0
offset_right = 156.0
offset_bottom = 191.0
text = "Spawn"

[node name="button_list" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 269.0
offset_bottom = 40.0

[node name="World_button" type="Button" parent="Panel/button_list"]
layout_mode = 2
text = "World"

[node name="Alife_button" type="Button" parent="Panel/button_list"]
layout_mode = 2
text = "A-Life"

[connection signal="pressed" from="ShowButton" to="." method="_on_show_button_pressed"]
[connection signal="pressed" from="Panel/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="text_submitted" from="Panel/World_Debug/option/world/world_speed/LineEdit_wspeed" to="." method="_on_line_edit_wspeed_text_submitted"]
[connection signal="text_changed" from="Panel/World_Debug/option/energy_diffusion/speed/LineEdit_speed" to="." method="_on_line_edit_speed_text_changed"]
[connection signal="text_submitted" from="Panel/World_Debug/option/energy_diffusion/speed/LineEdit_speed" to="." method="_on_line_edit_speed_text_submitted"]
[connection signal="text_changed" from="Panel/World_Debug/option/energy_diffusion/factor/LineEdit_factor" to="." method="_on_line_edit_factor_text_changed"]
[connection signal="text_submitted" from="Panel/World_Debug/option/energy_diffusion/factor/LineEdit_factor" to="." method="_on_line_edit_factor_text_submitted"]
[connection signal="text_changed" from="Panel/World_Debug/option/energy_diffusion/minvalue/LineEdit_min" to="." method="_on_line_edit_min_text_changed"]
[connection signal="text_submitted" from="Panel/World_Debug/option/energy_diffusion/minvalue/LineEdit_min" to="." method="_on_line_edit_min_text_submitted"]
[connection signal="text_submitted" from="Panel/World_Debug/option/spawn_energy/edit_energy/LineEdit_spawnenergy" to="." method="_on_line_edit_spawnenergy_text_submitted"]
[connection signal="text_submitted" from="Panel/World_Debug/option/spawn_energy/radius/LineEdit_radius" to="." method="_on_lineedit_radius_text_submitted"]
[connection signal="toggled" from="Panel/World_Debug/option/spawn_energy/mouse/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Panel/button_list/World_button" to="." method="_on_world_button_pressed"]
[connection signal="pressed" from="Panel/button_list/Alife_button" to="." method="_on_alife_button_pressed"]
